[tool.poetry]
name = "pokebattle"
version = "0.1.0"
description = ""
authors = ["Miguel <miguelcoellorodriguez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
battle = "pokebattle.battle:start"
